--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,4 @@
-/* HEADER */
-
-#header {
-  height: 100px;
-  background-color: #2c3e50;
-}
+/* DEBUG */
 
 .box {
   min-height: 50px;
@@ -12,6 +7,13 @@
   text-align: center;
   background-color: pink;
   border: 1px solid black;
+}
+
+/* HEADER */
+
+#header {
+  height: 100px;
+  background-color: #2c3e50;
 }
 
 /* MAIN */
@@ -25,4 +27,14 @@
 
 #hero img {
   width: 50%;
+}
+
+/* portfolio */
+
+#portfolio h2 {
+  text-align: center;
+}
+
+#portfolio img {
+  width: 100%;
 }
