--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,13 @@
 #contact h2 {
   text-align: center;
 }
+
+/* FOOTER */
+
+#footer {
+  background-color: #3a546d;
+}
+
+.copyright {
+  background-color: #2c3e50;
+}
