--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@
   background-color: #3a546d;
 }
 
+#footer .box {
+  background-color: #3a546d;
+}
+
 .copyright {
   background-color: #2c3e50;
 }
