html and css: edit

--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,6 @@
 
 /* portfolio */
 
-#portfolio h2 {
-  text-align: center;
-}
-
 #portfolio img {
   width: 100%;
 }
@@ -50,13 +46,9 @@
 
 /* contact */
 
-#contact h2 {
-  text-align: center;
-}
-
 /* FOOTER */
 
-#footer {
+.top-footer {
   background-color: #3a546d;
 }
 
