--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,14 @@
   background-color: #2c3e50;
 }
 
+#header button {
+  background-color: #2c3e50;
+}
+
+#header a {
+  text-decoration: none;
+}
+
 /* MAIN */
 
 /* hero */
